test/files/neg/t1503.check
t1503.scala:10: error: type mismatch;
 found   : n.type (with underlying type Any)
 required: Nil.type
  val a: Nil.type = (Vector(): Any) match { case n @ Nil => n }       // error
                                                            ^
t1503.scala:12: error: type mismatch;
 found   : n.type (with underlying type Any)
 required: Nil.type
  val b: Nil.type = (Vector(): Any) match { case n @ (m @ Nil) => n } // error was: CCE
                                                                  ^
t1503.scala:18: error: type mismatch;
 found   : Any
 required: Int
  val d: Int = (1.0: Any) match { case x @ 1 => x }                   // error
                                                ^
t1503.scala:20: error: type mismatch;
 found   : Any
 required: Int
  val e: Int = (1.0: Any) match { case x @ (_: 1) => x }              // error was: CCE
                                                     ^
4 errors
